test/files/pos/t2130-1.scala
package foo

package object bar {
  case class Bippy(x: Int) { }
}
