test/files/neg/case-collision2.scala
package foo

class Bippy

class BIPPY

object Dingo
object DINGO

case class Hyrax()
object HyRaX
